# task-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  informations.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: .gitkeep  c84f10b413dd_initial_tables_users_tasks_projects_.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/api/v1/endpoints/: __init__.py  auth.py  labels.py  projects.py  tasks.py  users.py
app/core/: __init__.py  config.py  database.py  dependencies.py  security.py
app/models/: __init__.py  activity_log.py  label.py  project.py  task.py  user.py
app/repositories/: __init__.py  task_repository.py  user_repository.py
app/schemas/: __init__.py  label.py  project.py  task.py  user.py
app/services/: __init__.py  project_service.py  task_service.py  user_service.py
app/utils/: __init__.py  exceptions.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_tasks.py
tests/unit/: __init__.py  test_security.py
