# Project Configuration
#
# This file configures Python tools for the project.
# It's the modern way to configure tools instead of separate config files.
#
# Sections:
# - [project]: Package metadata (for publishing, optional)
# - [tool.black]: Black code formatter settings
# - [tool.isort]: Import sorting settings
# - [tool.ruff]: Ruff linter settings
# - [tool.mypy]: Type checking settings
# - [tool.pytest]: Test runner settings

[project]
name = "task-api"
version = "1.0.0"
description = "A production-ready RESTful API for task management"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Yacine-Alexis", email = "your-email@example.com"}
]
requires-python = ">=3.11"
keywords = ["api", "fastapi", "tasks", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | alembic/versions
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
skip = [".venv", "venv", "alembic"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    "venv",
    "alembic",
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["alembic", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["app/__init__.py", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
